fix(nav): visibility

--- a/stylesheets.scss
+++ b/stylesheets.scss
@@ -118,6 +118,10 @@ p {
   }
 }
 
+.mobile-nav-button {
+  display: none;
+}
+
 #menu {
   display: none;
 }
@@ -286,6 +290,10 @@ p {
 // Media Queries
 
 @media only screen and (max-width: 700px) {
+  .mobile-nav-button {
+    display: block;
+  }
+
   #menu {
     display: block;
   }
